<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">5do12</string>
    <string name="currency"> kn</string>

    <string name="gcm_project_id">noted-trail-758</string>
    <string name="gcm_project_no">492542058520</string>

    <string name="serverUrl">http://nas2skupa.com/5do12/</string>

    <string name="city_prompt">GRAD</string>
 
    <string-array name="city_arrays">
        <item>ZAGREB</item>
    </string-array>
    
    <string name="block_prompt">KVART</string>
    <string name="btnRegister">Registriraj se</string>
    <string name="mon">PON</string>
    <string name="tue">UTO</string>
    <string name="wen">SRI</string>
    <string name="thu">ČET</string>
    <string name="fri">PET</string>
    <string name="sat">SUB</string>
    <string name="sun">NED</string>

    <string-array name="block_arrays">
        <item>Brezovica</item>
        <item>Črnomerec</item>
        <item>Donja Dubrava</item>
        <item>Donji Grad</item>
        <item>Gornja Dubrava</item>
        <item>Gornji Grad - Medveščak</item>
        <item>Maksimir</item>
        <item>Novi Zagreb - Istok</item>
        <item>Novi Zagreb - Zapad</item>
        <item>Peščenica - Žitnjak</item>
        <item>Podsljeme</item>
        <item>Podsused - Vrapče</item>
        <item>Sesvete</item>
        <item>Stenjevec</item>
        <item>Trešnjevka - Jug</item>
        <item>Trešnjevka - Sjever</item>
        <item>Trnje</item>
        <item>Zagreb - Okolica</item>
    </string-array>

    <!--Http request strings-->
    <string name="pleaseWait">Molimo pričekajte...</string>
    <string name="serverError">Došlo je do greške u radu sa serverom. Molimo pokušajte ponovo kasnije.</string>
    <string name="confirmationSent">Odgovor je poslan.</string>

    <!--Login page-->
    <string name="usernametxt">Korisničko ime</string>
    <string name="passtxt">Lozinka</string>
    <string name="btnLogin">Prijavi se</string>

    <!--Register page-->
    <string name="name">Ime</string>
    <string name="surname">Prezime</string>
    <string name="address">Adresa</string>
    <string name="email">Email</string>
    <string name="phone">Mobitel</string>
    <string name="password">Lozinka</string>
    <string name="repeatPassword">Ponovi lozinku</string>
    <string name="register">Registriraj se</string>
    <string name="mandatoryFields">Molimo ispunite sva polja kako bi se mogli registrirati.</string>
    <string name="passwordsMismatch">Lozinke se ne podudaraju, pokušajte ponovo.</string>
    <string name="registrationUserExists">Korisnik s ovom email adresom je već registriran.</string>
    <string name="registrationComplete">Registracija uspješna. Molimo aktivirajte svoj račun putem linka koji vam je poslan na email.</string>
    <string name="code">Registracijski kod</string>


    <string name="cancel">Otkaži</string>
    <string name="confirm">Potvrdi</string>
    <string name="close">Zatvori</string>
    <string name="cancelSelected">Otkaži označene</string>
    <string name="ok">Ok</string>
    <string name="canceled">Otkazano</string>
    <string name="confirmed">Potvrđeno</string>
    <string name="waiting_confirmation_provider">Čeka potvrdu pružatelja usluge</string>
    <string name="waiting_confirmation_user">Čeka tvoju potvrdu</string>
    <string name="msg_location_unknown_long">Nažalost vaša je lokacija trenutno nepoznata pa sortiranje po udaljenosti nije moguće..</string>

</resources>
